--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -13,7 +13,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve",
+    // "jsx": "preserve",
+    "jsx": "react-jsx",
     // Added for websocket
     "noImplicitAny": false
   },
