--- a/ui/package.json
+++ b/ui/package.json
@@ -50,7 +50,6 @@
     "react-resizable-panels": "^2.1.2",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
-    "react-spinners": "^0.13.6",
     "react-terminal": "1.3.0",
     "react-toastify": "10.0.5",
     "rehype-raw": "^7.0.0",
@@ -105,6 +104,15 @@
     "directories": {
       "buildResources": "public"
     },
+    "extraResources": [
+      {
+        "from": "backend",
+        "to": "backend",
+        "filter": [
+          "*"
+        ]
+      }
+    ],
     "win": {
       "artifactName": "${name}_${version}_${arch}_${os}.${ext}",
       "icon": "build/favicon.ico"
