--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,12 +74,27 @@ jobs:
           p12-file-base64: ${{ secrets.MACOS_SIGN_P12 }}
           p12-password: ${{ secrets.MACOS_SIGN_PASSWORD }}
 
-      - name: Package Electron app
+      - name: Package Electron app for macOS
         env:
           POSTHOG_API_KEY: ${{ secrets.POSTHOG_API_KEY }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
+        run: make electron-package-mac
+
+      - name: Package Electron app for linux
+        env:
+          POSTHOG_API_KEY: ${{ secrets.POSTHOG_API_KEY }}
+        run: make electron-package-linux
+
+      - name: Package Electron app for linux
+        env:
+          POSTHOG_API_KEY: ${{ secrets.POSTHOG_API_KEY }}
         run: make electron-package
+
+      - name: Package Electron app for windows
+        env:
+          POSTHOG_API_KEY: ${{ secrets.POSTHOG_API_KEY }}
+        run: make electron-package-windows
 
       - name: Extract version from tag
         id: extract_version
