--- a/ui/package.json
+++ b/ui/package.json
@@ -27,6 +27,7 @@
     "@xterm/addon-unicode11": "^0.8.0",
     "@xterm/addon-web-links": "0.11.0",
     "@xterm/xterm": "5.5.0",
+    "ansi_up": "^6.0.6",
     "bootstrap": "^5.1.3",
     "concurrently": "^7.2.0",
     "deepdash": "4.5.1",
