ci: add RPM package support to Ubuntu CI workflow
- Install rpm build tools in GitHub Actions runner
- Add electron-package-rpm build step for RedHat support
- Upload both DEB and RPM artifacts in single package

Fixes #87

--- a/.github/workflows/electron-ubuntu.yml
+++ b/.github/workflows/electron-ubuntu.yml
@@ -38,8 +38,14 @@ jobs:
       - name: Package Electron app
         run: make electron-package-linux
 
-      - name: Upload artifacts
+      - name: Upload DEB artifacts
         uses: actions/upload-artifact@v4
         with:
           name: zasper_${{ steps.get_version.outputs.VERSION }}.deb
           path: ui/dist/zasper_${{ steps.get_version.outputs.VERSION }}.deb
+      
+      - name: Upload RPM artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: zasper_${{ steps.get_version.outputs.VERSION }}.rpm
+          path: ui/dist/zasper_${{ steps.get_version.outputs.VERSION }}.rpm
