--- a/ui/package.json
+++ b/ui/package.json
@@ -163,6 +163,14 @@
             "x64",
             "arm64"
           ]
+        },
+        {
+          "target": "rpm",
+          "arch": [
+            "x64",
+            "arm64",
+            "ia32"
+          ]
         }
       ]
     }
