--- a/ui/package.json
+++ b/ui/package.json
@@ -168,8 +168,7 @@
           "target": "rpm",
           "arch": [
             "x64",
-            "arm64",
-            "ia32"
+            "arm64"
           ]
         }
       ]
