--- a/.github/workflows/electron-ubuntu.yml
+++ b/.github/workflows/electron-ubuntu.yml
@@ -29,6 +29,11 @@ jobs:
         id: get_version
         run: echo "VERSION=$(cat version.txt)" >> $GITHUB_OUTPUT
 
+      - name: Install RPM build tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y rpm
+
       - name: Install Dependencies
         run: make init
 
@@ -38,8 +43,14 @@ jobs:
       - name: Package Electron app
         run: make electron-package-linux
 
-      - name: Upload artifacts
+      - name: Upload DEB artifacts
         uses: actions/upload-artifact@v4
         with:
           name: zasper_${{ steps.get_version.outputs.VERSION }}.deb
           path: ui/dist/zasper_${{ steps.get_version.outputs.VERSION }}.deb
+      
+      - name: Upload RPM artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: zasper_${{ steps.get_version.outputs.VERSION }}.rpm
+          path: ui/dist/zasper_${{ steps.get_version.outputs.VERSION }}.rpm
