--- a/ui/package.json
+++ b/ui/package.json
@@ -53,7 +53,9 @@
     "react-scripts": "^5.0.1",
     "react-terminal": "1.3.0",
     "react-toastify": "10.0.5",
+    "rehype-mathjax": "^7.1.0",
     "rehype-raw": "^7.0.0",
+    "remark-math": "^6.0.0",
     "swiper": "^11.2.6",
     "typescript": "^4.9.5",
     "uuid": "11.0.5",
