--- a/ui/package.json
+++ b/ui/package.json
@@ -42,7 +42,7 @@
     "react": "18.3.1",
     "react-bootstrap": "^2.4.0",
     "react-codemirror-merge": "^4.23.2",
-    "react-cookie": "4.1.1",
+    "react-cookie": "^8.0.1",
     "react-dom": "18.3.1",
     "react-icons-kit": "^1.3.1",
     "react-images-uploading": "3.1.7",
@@ -70,8 +70,8 @@
     "@types/dompurify": "^2.4.0",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
-    "electron": "^30.1.0",
-    "electron-builder": "^24.13.3",
+    "electron": "^40.4.1",
+    "electron-builder": "^26.7.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
