--- a/ui/package.json
+++ b/ui/package.json
@@ -144,9 +144,7 @@
       "hardenedRuntime": true,
       "entitlements": "resources/entitlements.mac.plist",
       "entitlementsInherit": "resources/entitlements.mac.plist",
-      "notarize": {
-        "teamId": "C72MG66GBX"
-      }
+      "notarize": true
     },
     "linux": {
       "artifactName": "${name}_${version}_${arch}_${os}.${ext}",
